--- a/contribution_form/cf_init_style.css
+++ b/contribution_form/cf_init_style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #main {
-  border: 1px solid red;   
+  /* border: 1px solid red;    */
   display: flex;
   width: 50rem;
   flex-direction: column;
@@ -50,17 +50,25 @@ p.description {
 input:not([type="checkbox"]) {
   display: block;
   margin-bottom: 35px;
+  margin-right: 20px;
   line-height: 2;
-  width: 180px
+  width: 180px;
+  outline: none;
 }
 
-input.invalid {
-  background-color: #ffdddd;
+#dset_author1_name {
+  margin-bottom: 0 !important;
 }
 
 
 input[type="text"], textarea {
   font-size: 14px;
+  border-radius: 5px;
+  border-style: solid;
+}
+
+input[type="text"] {
+  margin: 0,
 }
 
 label:not([class="checkbox"]) span, h3 {
@@ -78,4 +86,43 @@ textarea {
   margin-bottom: 35px;
   width: 600px;
   font-family: 'Open Sans', sans-serif;
+}
+
+/* Form Validation CSS */
+.errors {
+  display: none;
+  background-color: #ffdddd;
+}
+
+
+.invalid {
+  background-color: #ffdddd;
+  border-color: red;
+  border-width: 1px;
+  border-style: solid;
+  
+  box-shadow: 1px 1px 1px red;
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+.error {
+  display: none;
+  color: red;
+  font-weight: normal !important;
+  font-size: 14px;
+}
+
+.input-error-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+#form-error {
+  display: none;
+  color: red;
 }
