server-side validation complete for landing page

--- a/contribution_form/templates/init.xml
+++ b/contribution_form/templates/init.xml
@@ -19,6 +19,7 @@
   <dset_name />
   <dset_network_configuration />
   <dset_nontech_description />
+  <dset_num_authors>1</dset_num_authors>
   <dset_num_tracesets>1</dset_num_tracesets>
   <dset_sanitization />
   <dset_start_date />
