updated submission message; renamed 'suggestions' field to 'notes'; edited some field documentation; added hyperlinks for dataset/institution names suggestion; edited regex for xset name validation (allows hyphens and underscores

--- a/contribution_form/style.css
+++ b/contribution_form/style.css
@@ -247,6 +247,12 @@ a, a:visited, a:active, a:hover {
 #confirm-num-tsets {
   display: none;
   margin-left: 20px;
+  margin-right: 20px;
+}
+
+#dset_num_tracesets {
+  color: transparent;
+  text-shadow: 0 0 0 black;
 }
 
 #data-loss-warning {
