--- a/contribution_form/templates/init.xml
+++ b/contribution_form/templates/init.xml
@@ -23,7 +23,7 @@
   <dset_num_tracesets>1</dset_num_tracesets>
   <dset_sanitization />
   <dset_start_date />
-  <dset_suggestions />
+  <dset_notes />
   <tset1_collection_method></tset1_collection_method>
   <tset1_data_sanitization_method></tset1_data_sanitization_method>
   <tset1_description_short></tset1_description_short>
