--- a/contribution_form/templates/init.xml
+++ b/contribution_form/templates/init.xml
@@ -1,35 +1,27 @@
 <form_in_progress>
-  <dset_author1_country>United States of America</dset_author1_country>
+  <dset_name />
+  <dset_institution_name />
+  <dset_description_short />
+  <dset_description_long />
+  <dset_num_tracesets>1</dset_num_tracesets>
+  <dset_num_authors>1</dset_num_authors>
+  <dset_author1_name />
   <dset_author1_email />
   <dset_author1_institution />
-  <dset_author1_name />
-  <dset_author2_country>United States of America</dset_author2_country>
-  <dset_author2_email />
-  <dset_author2_institution />
-  <dset_author2_name />
-  <dset_collection_methodology />
-  <dset_description_long />
-  <dset_description_short />
-  <dset_end_date />
+  <dset_author1_country>United States of America</dset_author1_country>
   <dset_external_url />
-  <dset_incorrectly_meas_data />
-  <dset_institution_name />
-  <dset_methodology_limitations />
-  <dset_missing_data />
-  <dset_name />
-  <dset_network_configuration />
   <dset_nontech_description />
-  <dset_num_authors>1</dset_num_authors>
-  <dset_num_tracesets>1</dset_num_tracesets>
-  <dset_sanitization />
-  <dset_start_date />
   <dset_notes />
-  <tset1_collection_method></tset1_collection_method>
-  <tset1_data_sanitization_method></tset1_data_sanitization_method>
-  <tset1_description_short></tset1_description_short>
-  <tset1_end_date />
-  <tset1_name></tset1_name>
+  <tset1_name />
+  <tset1_description_short />
+  <tset1_tech_description />
   <tset1_start_date />
-  <tset1_tech_description></tset1_tech_description>
-  <tset1_trace_note></tset1_trace_note>
+  <tset1_end_date />
+  <tset1_collection_method />
+  <tset1_methodology_limitations />
+  <tset1_data_sanitization_method />
+  <tset1_missing_data />
+  <tset1_incorrectly_meas_data />
+  <tset1_network_configuration />  
+  <tset1_trace_note />
 </form_in_progress>
